# Pensieve-PPO

./: .gitignore  .gitmodules  README.md  pyproject.toml
pensieve_ppo/: __init__.py  __main__.py  args.py  combinations.py  defaults.py  generate_exp_pool.py  imitate.py  imitate_exp_pool.py  prepare.py  test.py  train.py
pensieve_ppo/agent/: __init__.py  abc.py  abcrl.py  imitate.py  registry.py  trainable.py  trainer.py
pensieve_ppo/agent/bba/: __init__.py  agent.py  env.py  observer.py
pensieve_ppo/agent/mpc/: __init__.py  agent.py  agent_oracle.py  env.py  observer.py  observer_oracle.py
pensieve_ppo/agent/netllm/: __init__.py  abc.py  container.py  observer.py  policy.py  state_encoder.py
pensieve_ppo/agent/ppo/: __init__.py  agent.py  model.py
pensieve_ppo/agent/rl/: __init__.py  abc.py  abcrl.py  env.py  observer.py  registry.py  trainable.py  trainer.py  utils.py
pensieve_ppo/core/: __init__.py  combinations.py
pensieve_ppo/core/simulator/: __init__.py  abc.py  combinations.py  simulator.py
pensieve_ppo/core/trace/: __init__.py  abc.py  data.py  loader.py  simulator.py  wrapper.py
pensieve_ppo/core/video/: __init__.py  abc.py  data.py  loader.py  player.py  registry.py  (+1 more)
pensieve_ppo/dataset/: __init__.py
pensieve_ppo/exp_pool/: __init__.py  abc.py  dataset.py  pool.py  trainer.py  writer.py
pensieve_ppo/gym/: __init__.py  combinations.py  defaults.py  env.py  imitate.py  qoe.py
pensieve_ppo/quality_ladder/: __init__.py  abc.py  envivio.py  observer.py  player.py
pensieve_ppo/simulator/: __init__.py  abc.py  base.py
tests/: __init__.py  test_data_loaders.py  test_env_equivalence.py  test_ppo_agent_equivalence.py  test_random_simulator_equivalence.py  test_simulator_equivalence.py  test_test_equivalence.py
tools/: download_plm.py
(+79 files in other folders)
